ganti ci, struk baru

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,4 @@ jobs:
       # Run tests
       - name: Run tests
         run: npm test
-        working-directory: ./frontend/src
+        working-directory: ./frontend
